# MotionMagic

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run_07_gesture_test.bat  run_game.bat  setup_env.bat
docs/: final-presentation-ai-draft.md  final-presentation.html  gameflow.md  idea.md  motion-requirements.md  presentation-speaker-notes.md  proposal.md  workflow.md
scripts/: 00_collect_data.py  01_preprocess.py  02_train_model.py  03_export_onnx.py  04_evaluate_model.py  05_live_demo.py  06_trigger_shoot_test.py  07_gesture_mode_test.py  08_ai_workflow.py  collect_data.py  evaluate_model.py  install_python.ps1  train_model.py
src/ai/: __init__.py  aim_tracker.py  collector.py  dataset.py  gesture_modes.py  model.py  preprocessor.py  recognizer.py  rule_validator.py  trainer.py  trigger_shot.py
src/bridge/: camera_thread.py  gesture_event.py  gesture_mode_pipeline.py
src/game/: app.py  game_manager.py  gesture_input.py  settings.py
src/game/entities/: enemy.py  player.py  projectile.py
src/game/scenes/: battle.py  explain.py  result.py  title.py  unlock.py
src/game/systems/: combat.py  magic.py  particles.py  reward.py  (+2 more)
tests/: test_aim_tracker.py  test_app_gesture_bridge.py  test_battle_gesture_bridge.py  test_dataset.py  test_gesture_mode_pipeline.py  test_gesture_modes.py  test_hud.py  test_menu_gesture_bridge.py  test_meteor.py  test_model.py  test_player.py  test_preprocessor.py  test_projectile.py  test_reward.py  test_rule_validator.py  test_trigger_shot.py  test_unlock.py
(+10 files in other folders)
